--- a/CAFETERÍA_PROYECTO_FINAL_CLEAN.ipynb
+++ b/CAFETERÍA_PROYECTO_FINAL_CLEAN.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1iwydLIz6kd2EN8uL2g8uuDoptUHqN0IU",
+      "authorship_tag": "ABX9TyMcDAMA4SYVM8x7V0NEbfNG",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -4284,6 +4287,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/menien/CAFETER-A_SHAKER_CHAOS/blob/main/CAFETER%C3%8DA_PROYECTO_FINAL_CLEAN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
